src/css/style.css
/* ... */
.fab-wrapper .fab.ball:hover {
  background: #960e29;
}

.fab-wrapper .fab.ball svg {
  height: 25px;
  width: 25px;
  color: white;
}

.fab-wrapper .fab.move {
  opacity: 0;
}

.fab-wrapper .fab.move::before {
  opacity: 0;
  position: absolute;
  content: attr(data-tooltip);
  padding: 6px 10px;
  font-size: 12px;
  background: #050718;
  color: white;
  left: 0;
  -webkit-transform: translateX(-110%) translateY(10px) scale(0);
          transform: translateX(-110%) translateY(10px) scale(0);
  opacity: 0;
  -webkit-transform-origin: 90% 90%;
          transform-origin: 90% 90%;
  white-space: nowrap;
  border-radius: 5px;
  pointer-events: none;
}

@media screen and (max-width: 500px) {
  .no-chat {
    width: 80%;
    gap: 0;
  }
  .no-chat .no-chat-svg {
    width: 100%;
    height: auto;
  }
}

.loader-container.dark {
  background: #10155388;
}

#root.dark {
  background: #050718;
  color: white;
}

#root.dark .tabs {
  background: #050718;
}

#root.dark .options_dropdown {
  background: #050718;
  -webkit-box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.582);
          box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.582);
  border: 2px solid white;
}

#root.dark .chat-pannel .form_input {
  background: #050718;
  -webkit-box-shadow: 0px 2px 8px #05071836, 0px 2px 5px #05071821;
          box-shadow: 0px 2px 8px #05071836, 0px 2px 5px #05071821;
}

#root.dark .chat-pannel .form_input textarea {
  background: #050718;
  color: white;
}

#root.dark .messages_header .head,
#root.dark .messages_header .messages_options {
  background: #050718;
  color: white;
  -webkit-box-shadow: 0px 3px 15px #0507187c;
          box-shadow: 0px 3px 15px #0507187c;
}

#root.dark input {
  background: none;
  color: white;
}

#root.dark input:-webkit-autofill {
  border-radius: 5px;
  background-color: rgba(220, 20, 60, 0.1) !important;
}

#root.dark .auth form .input_feild {
  border-bottom: 3px solid #bebebe;
}

#root.dark .auth form .input_feild svg {
  stroke: white;
  color: white;
}

#root.dark .info_bubble {
  background: #0507185d;
  -webkit-box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.247);
          box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.247);
}

#root.dark .message .text {
  -webkit-box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.199);
          box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.199);
  color: white;
}

#root.dark .message.sent .bubble .text {
  background: #050718;
}

#root.dark .message.received .bubble .text {
  background: rgba(220, 20, 60, 0.1);
}

#root.dark .message .timestamp {
  color: rgba(255, 255, 255, 0.4);
}

#root.dark .chat-pannel .messages .message .img_profile {
  -webkit-box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.4);
          box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.4);
  border-radius: 50%;
}

#root.dark .chat-pannel .messages .message .img_profile img {
  -webkit-box-shadow: none;
          box-shadow: none;
}

#root.dark p.or {
  color: white;
}

#root.dark p.or::before {
  background: none;
}

#root.dark p.or span {
  background: rgba(220, 20, 60, 0.1);
  border-radius: 5px;
}

#root.dark .modal-custom .underlay {
  background: #10155388;
}

#root.dark .modal-custom .modal-content-custom {
  background: #050718;
  -webkit-box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.274);
          box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.274);
}

#root.dark .modal-custom .modal-head {
  background: #050718;
}

#root.dark .bordered_input_box.valid .label {
  background: #050718;
}

#root.dark .banner-container img {
  display: none;
}

#root.dark .banner-container .logo {
  -webkit-transform: scale(1.7);
          transform: scale(1.7);
  pointer-events: none;
}

#root.dark .fab-wrapper .fab.ball {
  -webkit-box-shadow: 0px 6px 15px #200107d2, 0px 10px 25px #20010793;
          box-shadow: 0px 6px 15px #200107d2, 0px 10px 25px #20010793;
}

#root.dark .fab-wrapper .fab.move {
  opacity: 0;
}

#root.dark .fab-wrapper .fab.move::before {
  opacity: 0;
  position: absolute;
  content: attr(data-tooltip);
  padding: 6px 10px;
  font-size: 12px;
  background: #050718;
  color: white;
  left: 0;
  -webkit-transform: translateX(-110%) translateY(10px);
          transform: translateX(-110%) translateY(10px);
  opacity: 0;
  -webkit-transition: 0.3s;
  transition: 0.3s;
  white-space: nowrap;
  border-radius: 5px;
  pointer-events: none;
}

#root.dark .fab-wrapper .fab.move:hover::before {
  opacity: 1;
  -webkit-transform: translateX(-110%) translateY(0px);
          transform: translateX(-110%) translateY(0px);
}

#root.dark .toggle-slot {
  background: #050718;
}

@media screen and (max-width: 700px) {
  .tabs {
    border-radius: 0px 10px 10px 0px;
  }
}

@media screen and (max-width: 400px) {
  .auth .auth-wrapper {
    padding: 0;
  }
  .auth .auth-wrapper form {
    padding: 20px;
  }
  .loader-wrapper {
    scale: 0.6;
  }
  .no-chat-selected {
    font-size: 20px !important;
  }
  #root {
    padding: 10px;
  }
  .messages_header .head {
    height: 45px;
    -ms-grid-columns: 25px auto;
        grid-template-columns: 25px auto;
  }
  .messages_header .head svg {
    width: 15px;
    height: 15;
  }
  .messages_header .head h5 {
    font-size: 18px;
  }
  .messages_header .messages_options {
    height: 45px;
  }
  .messages_header {
    -ms-grid-columns: auto 45px;
        grid-template-columns: auto 45px;
    gap: 10px;
  }
  .chat-pannel .underlay {
    display: none;
  }
}
/*# sourceMappingURL=style.css.map */

